東京6区3ページずつ物件を取得しました。

--- a/make_db/make_db_jasmine_chiyoda_page1_all_property.ipynb
+++ b/make_db/make_db_jasmine_chiyoda_page1_all_property.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -140,38 +140,38 @@
       "28  18.49m2   東   アパート  築36年     埼玉県東松山市元宿２                     東武東上線/高坂駅 歩6分   \n",
       "29   8.28m2   南   アパート  築45年      東京都中野区若宮１                   西武新宿線/都立家政駅 歩4分   \n",
       "\n",
-      "   敷金 礼金  保証金 敷引・償却                     取り扱い店舗    取り扱い店舗の電話番号  \n",
-      "0   -  -    -     -             不動産通信社 (株)ユウラク   03-5205-8424  \n",
-      "1   -  -    -     -  武蔵コミュニティー(株)東京本社賃貸のi live   03-6206-3371  \n",
-      "2   -  -    -     -  武蔵コミュニティー(株)東京本社賃貸のi live   03-6206-3371  \n",
-      "3   -  -    -     -               (株)アシスト・ビジネス   03-5980-9395  \n",
-      "4   -  -    -     -  武蔵コミュニティー(株)東京本社賃貸のi live   03-6206-3371  \n",
-      "5   -  -    -     -  武蔵コミュニティー(株)東京本社賃貸のi live   03-6206-3371  \n",
-      "6   -  -    -     -               (株)アシスト・ビジネス   03-5980-9395  \n",
-      "7   -  -    -     -        アパルトマンエージェント(株)東京支社   03-5822-1087  \n",
-      "8   -  -    -     -                   (株)東京めぞん   03-5280-7180  \n",
-      "9   -  -    -     -  武蔵コミュニティー(株)東京本社賃貸のi live   03-6206-3371  \n",
-      "10  -  -    -     -  武蔵コミュニティー(株)東京本社賃貸のi live   03-6206-3371  \n",
-      "11  -  -    -     -               (株)アシスト・ビジネス   03-5980-9395  \n",
-      "12  -  -    -     -  武蔵コミュニティー(株)東京本社賃貸のi live   03-6206-3371  \n",
-      "13  -  -    -     -  武蔵コミュニティー(株)東京本社賃貸のi live   03-6206-3371  \n",
-      "14  -  -    -     -  武蔵コミュニティー(株)東京本社賃貸のi live   03-6206-3371  \n",
-      "15  -  -    -     -  武蔵コミュニティー(株)東京本社賃貸のi live   03-6206-3371  \n",
-      "16  -  -    -     -  武蔵コミュニティー(株)東京本社賃貸のi live   03-6206-3371  \n",
-      "17  -  -    -     -        アパルトマンエージェント(株)東京支社   03-5822-1087  \n",
-      "18  -  -    -     -  武蔵コミュニティー(株)東京本社賃貸のi live   03-6206-3371  \n",
-      "19  -  -    -     -  武蔵コミュニティー(株)東京本社賃貸のi live   03-6206-3371  \n",
-      "20  -  -    -     -  武蔵コミュニティー(株)東京本社賃貸のi live   03-6206-3371  \n",
-      "21  -  -  3万円     -                (株)オッズ・スペース   03-5846-9399  \n",
-      "22  -  -    -     -             不動産通信社 (株)ユウラク   03-5205-8424  \n",
-      "23  -  -    -     -              (有)東京学生センター本社   03-3221-1239  \n",
-      "24  -  -    -     -                  日本中央管理(株)  050-3503-2308  \n",
-      "25  -  -    -     -           お茶の水賃貸センター (株)総伸   03-3292-4461  \n",
-      "26  -  -    -     -  武蔵コミュニティー(株)東京本社賃貸のi live   03-6206-3371  \n",
-      "27  -  -    -     -  武蔵コミュニティー(株)東京本社賃貸のi live   03-6206-3371  \n",
-      "28  -  -    -     -  武蔵コミュニティー(株)東京本社賃貸のi live   03-6206-3371  \n",
-      "29  -  -    -     -         ファミーユホーム(株)ピーアイホーム   03-6910-0383  \n",
-      "データがCSVファイル 'suumo_properties.csv' に保存されました。\n"
+      "     敷金   礼金  保証金 敷引・償却                     取り扱い店舗    取り扱い店舗の電話番号  \n",
+      "0     -    -    -     -             不動産通信社 (株)ユウラク   03-5205-8424  \n",
+      "1     -    -    -     -  武蔵コミュニティー(株)東京本社賃貸のi live   03-6206-3371  \n",
+      "2     -    -    -     -  武蔵コミュニティー(株)東京本社賃貸のi live   03-6206-3371  \n",
+      "3     -    -    -     -               (株)アシスト・ビジネス   03-5980-9395  \n",
+      "4     -    -    -     -  武蔵コミュニティー(株)東京本社賃貸のi live   03-6206-3371  \n",
+      "5     -    -    -     -  武蔵コミュニティー(株)東京本社賃貸のi live   03-6206-3371  \n",
+      "6     -    -    -     -               (株)アシスト・ビジネス   03-5980-9395  \n",
+      "7     -    -    -     -        アパルトマンエージェント(株)東京支社   03-5822-1087  \n",
+      "8     -    -    -     -                   (株)東京めぞん   03-5280-7180  \n",
+      "9     -    -    -     -  武蔵コミュニティー(株)東京本社賃貸のi live   03-6206-3371  \n",
+      "10    -    -    -     -  武蔵コミュニティー(株)東京本社賃貸のi live   03-6206-3371  \n",
+      "11    -    -    -     -               (株)アシスト・ビジネス   03-5980-9395  \n",
+      "12    -    -    -     -  武蔵コミュニティー(株)東京本社賃貸のi live   03-6206-3371  \n",
+      "13    -    -    -     -  武蔵コミュニティー(株)東京本社賃貸のi live   03-6206-3371  \n",
+      "14    -    -    -     -  武蔵コミュニティー(株)東京本社賃貸のi live   03-6206-3371  \n",
+      "15    -    -    -     -  武蔵コミュニティー(株)東京本社賃貸のi live   03-6206-3371  \n",
+      "16    -    -    -     -  武蔵コミュニティー(株)東京本社賃貸のi live   03-6206-3371  \n",
+      "17    -    -    -     -        アパルトマンエージェント(株)東京支社   03-5822-1087  \n",
+      "18    -    -    -     -  武蔵コミュニティー(株)東京本社賃貸のi live   03-6206-3371  \n",
+      "19    -    -    -     -  武蔵コミュニティー(株)東京本社賃貸のi live   03-6206-3371  \n",
+      "20    -    -    -     -  武蔵コミュニティー(株)東京本社賃貸のi live   03-6206-3371  \n",
+      "21    -    -  3万円   3万円                (株)オッズ・スペース   03-5846-9399  \n",
+      "22    -    -    -     -             不動産通信社 (株)ユウラク   03-5205-8424  \n",
+      "23    -    -    -     -              (有)東京学生センター本社   03-3221-1239  \n",
+      "24    -    -    -     -                  日本中央管理(株)  050-3503-2308  \n",
+      "25  3万円  3万円    -     -           お茶の水賃貸センター (株)総伸   03-3292-4461  \n",
+      "26    -    -    -     -  武蔵コミュニティー(株)東京本社賃貸のi live   03-6206-3371  \n",
+      "27    -    -    -     -  武蔵コミュニティー(株)東京本社賃貸のi live   03-6206-3371  \n",
+      "28    -    -    -     -  武蔵コミュニティー(株)東京本社賃貸のi live   03-6206-3371  \n",
+      "29    -    -    -     -         ファミーユホーム(株)ピーアイホーム   03-6910-0383  \n",
+      "データがCSVファイル 'chiyoda_page1_all_property.csv' に保存されました。\n"
      ]
     }
    ],
@@ -182,48 +182,45 @@
     "# すべての物件リストアイテムを取得\n",
     "property_items = soup.find_all('div', class_='property')\n",
     "\n",
-    "if property_items:\n",
-    "    for item in property_items:\n",
-    "        property_data = {\n",
-    "            '物件名': item.find('a', class_='js-cassetLinkHref').text if item.find('a', class_='js-cassetLinkHref') else '-',\n",
-    "            'URL': 'https://suumo.jp' + item.find('a', class_='js-cassetLinkHref')['href'] if item.find('a', class_='js-cassetLinkHref') else '-',\n",
-    "            'イメージ画像': item.find('img', class_='js-noContextMenu')['rel'] if item.find('img', class_='js-noContextMenu') else '-',\n",
-    "            '賃料': int(float(item.find('div', class_='detailbox-property-point').text.replace('万円', '')) * 10000) if item.find('div', class_='detailbox-property-point') else '-',\n",
-    "            '管理費': item.find('td', class_='detailbox-property--col1').find_all('div')[1].text.replace('管理費 ', '') if item.find('td', class_='detailbox-property--col1') and len(item.find('td', class_='detailbox-property--col1').find_all('div')) > 1 else '-',\n",
-    "            '間取り': item.find('td', class_='detailbox-property--col3').find_all('div')[0].text if item.find('td', class_='detailbox-property--col3') else '-',\n",
-    "            '専有面積': item.find('td', class_='detailbox-property--col3').find_all('div')[1].text.replace('\\n', '').strip() if item.find('td', class_='detailbox-property--col3') else '-',\n",
-    "            '向き': item.select('td.detailbox-property--col3')[0].find_all('div')[2].text if len(item.select('td.detailbox-property--col3')[0].find_all('div')) > 2 else '-' if item.select('td.detailbox-property--col3') else '-',\n",
-    "            '物件種別': item.select('td.detailbox-property--col3')[1].find_all('div')[0].text if len(item.select('td.detailbox-property--col3')) > 1 else '-' if item.select('td.detailbox-property--col3') else '-',\n",
-    "            '築年数': item.select('td.detailbox-property--col3')[1].find_all('div')[1].text if len(item.select('td.detailbox-property--col3')[1].find_all('div')) > 1 else '-' if item.select('td.detailbox-property--col3') else '-',\n",
-    "            '住所': item.select_one('td.detailbox-property-col:not([class*=\"detailbox-property--\"])').text.strip() if item.select_one('td.detailbox-property-col:not([class*=\"detailbox-property--\"])') else '-',\n",
-    "            '最寄り駅と距離': item.select_one('.detailnote-box > div').text.strip() if item.select_one('.detailnote-box > div') else '-',\n",
-    "            '敷金': '-' if item.find('div', string='敷') is None or item.find('div', string='敷').find_next('div').text == '-' else item.find('div', string='敷').find_next('div').text,\n",
-    "            '礼金': '-' if item.find('div', string='礼') is None or item.find('div', string='礼').find_next('div').text == '-' else item.find('div', string='礼').find_next('div').text,\n",
-    "            '保証金': '-' if item.find('div', class_='detailbox-property-inactive').text.strip() == '保証金 -' else item.find('div', class_='detailbox-property-inactive').text.strip().replace('保証金', '').strip(),\n",
-    "            '敷引・償却': '-' if item.find('div', string='敷引・償却') is None or item.find('div', string='敷引・償却').find_next('div').text == '-' else item.find('div', string='敷引・償却').find_next('div').text,\n",
-    "            '取り扱い店舗': item.select_one('.detailnote-box .detailnote-box-item div:nth-of-type(1)').text.strip() if item.select_one('.detailnote-box .detailnote-box-item div:nth-of-type(1)') else '-',\n",
-    "            '取り扱い店舗の電話番号': item.find('div', class_='ui-text--bold').text.strip() if item.find('div', class_='ui-text--bold') else '-'\n",
-    "        }\n",
+    "# 物件が見つかった場合の処理\n",
+    "for item in property_items:\n",
+    "    property_data = {\n",
+    "        '物件名': item.find('a', class_='js-cassetLinkHref').text if item.find('a', class_='js-cassetLinkHref') else '-',\n",
+    "        'URL': 'https://suumo.jp' + item.find('a', class_='js-cassetLinkHref')['href'] if item.find('a', class_='js-cassetLinkHref') else '-',\n",
+    "        'イメージ画像': item.find('img', class_='js-noContextMenu')['rel'] if item.find('img', class_='js-noContextMenu') else '-',\n",
+    "        '賃料': int(float(item.find('div', class_='detailbox-property-point').text.replace('万円', '')) * 10000) if item.find('div', class_='detailbox-property-point') else '-',\n",
+    "        '管理費': item.find('td', class_='detailbox-property--col1').find_all('div')[1].text.replace('管理費 ', '') if item.find('td', class_='detailbox-property--col1') and len(item.find('td', class_='detailbox-property--col1').find_all('div')) > 1 else '-',\n",
+    "        '間取り': item.find('td', class_='detailbox-property--col3').find_all('div')[0].text if item.find('td', class_='detailbox-property--col3') else '-',\n",
+    "        '専有面積': item.find('td', class_='detailbox-property--col3').find_all('div')[1].text.replace('\\n', '').strip() if item.find('td', class_='detailbox-property--col3') else '-',\n",
+    "        '向き': item.select('td.detailbox-property--col3')[0].find_all('div')[2].text if len(item.select('td.detailbox-property--col3')[0].find_all('div')) > 2 else '-' if item.select('td.detailbox-property--col3') else '-',\n",
+    "        '物件種別': item.select('td.detailbox-property--col3')[1].find_all('div')[0].text if len(item.select('td.detailbox-property--col3')) > 1 else '-' if item.select('td.detailbox-property--col3') else '-',\n",
+    "        '築年数': item.select('td.detailbox-property--col3')[1].find_all('div')[1].text if len(item.select('td.detailbox-property--col3')[1].find_all('div')) > 1 else '-' if item.select('td.detailbox-property--col3') else '-',\n",
+    "        '住所': item.select_one('td.detailbox-property-col:not([class*=\"detailbox-property--\"])').text.strip() if item.select_one('td.detailbox-property-col:not([class*=\"detailbox-property--\"])') else '-',\n",
+    "        '最寄り駅と距離': item.select_one('.detailnote-box > div').text.strip() if item.select_one('.detailnote-box > div') else '-',\n",
+    "        '敷金': item.find('td', class_='detailbox-property--col2').find_all('div')[0].contents[-1].strip() if item.find('td', class_='detailbox-property--col2') else '-',\n",
+    "        '礼金': item.find('td', class_='detailbox-property--col2').find_all('div')[1].contents[-1].strip() if item.find('td', class_='detailbox-property--col2') else '-',\n",
+    "        '保証金': item.find('div', class_='detailbox-property-inactive', string=lambda text: '保証金' in text).text.replace('保証金', '').strip() if item.find('div', class_='detailbox-property-inactive', string=lambda text: '保証金' in text) else '-',\n",
+    "        '敷引・償却': item.find('div', class_='detailbox-property-inactive', string=lambda text: '敷引・償却' in text).text.replace('敷引・償却', '').strip() if item.find('div', class_='detailbox-property-inactive', string=lambda text: '敷引・償却' in text) else '-',\n",
+    "        '取り扱い店舗': item.select_one('.detailnote-box .detailnote-box-item div:nth-of-type(1)').text.strip() if item.select_one('.detailnote-box .detailnote-box-item div:nth-of-type(1)') else '-',\n",
+    "        '取り扱い店舗の電話番号': item.find('div', class_='ui-text--bold').text.strip() if item.find('div', class_='ui-text--bold') else '-'\n",
+    "    }\n",
     "\n",
-    "        properties_list.append(property_data)\n",
+    "    properties_list.append(property_data)\n",
     "\n",
-    "    # データフレームに変換\n",
-    "    df = pd.DataFrame(properties_list)\n",
+    "# データフレームに変換\n",
+    "df = pd.DataFrame(properties_list)\n",
     "\n",
-    "    # データフレームを表示\n",
-    "    print(df)\n",
+    "# データフレームを表示\n",
+    "print(df)\n",
     "\n",
-    "    # データフレームをCSVファイルに出力\n",
-    "    df.to_csv('chiyoda_page1_all_property.csv', index=False, encoding='utf-8-sig')\n",
-    "    print(\"データがCSVファイル 'chiyoda_page1_all_property.csv' に保存されました。\")\n",
-    "else:\n",
-    "    print(\"物件情報が見つかりませんでした。\")\n",
-    "\n"
+    "# データフレームをCSVファイルに出力\n",
+    "df.to_csv('chiyoda_page1_all_property.csv', index=False, encoding='utf-8-sig')\n",
+    "print(\"データがCSVファイル 'chiyoda_page1_all_property.csv' に保存されました。\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -263,10 +260,10 @@
     "        '築年数': item.select('td.detailbox-property--col3')[1].find_all('div')[1].text if len(item.select('td.detailbox-property--col3')[1].find_all('div')) > 1 else '-' if item.select('td.detailbox-property--col3') else '-',\n",
     "        '住所': item.select_one('td.detailbox-property-col:not([class*=\"detailbox-property--\"])').text.strip() if item.select_one('td.detailbox-property-col:not([class*=\"detailbox-property--\"])') else '-',\n",
     "        '最寄り駅と距離': item.select_one('.detailnote-box > div').text.strip() if item.select_one('.detailnote-box > div') else '-',\n",
-    "        '敷金': '-' if item.find('div', string='敷') is None or item.find('div', string='敷').find_next('div').text == '-' else item.find('div', string='敷').find_next('div').text,\n",
-    "        '礼金': '-' if item.find('div', string='礼') is None or item.find('div', string='礼').find_next('div').text == '-' else item.find('div', string='礼').find_next('div').text,\n",
-    "        '保証金': '-' if item.find('div', class_='detailbox-property-inactive').text.strip() == '保証金 -' else item.find('div', class_='detailbox-property-inactive').text.strip().replace('保証金', '').strip(),\n",
-    "        '敷引・償却': '-' if item.find('div', string='敷引・償却') is None or item.find('div', string='敷引・償却').find_next('div').text == '-' else item.find('div', string='敷引・償却').find_next('div').text,\n",
+    "        '敷金': item.find('td', class_='detailbox-property--col2').find_all('div')[0].contents[-1].strip() if item.find('td', class_='detailbox-property--col2') else '-',\n",
+    "        '礼金': item.find('td', class_='detailbox-property--col2').find_all('div')[1].contents[-1].strip() if item.find('td', class_='detailbox-property--col2') else '-',\n",
+    "        '保証金': item.find('div', class_='detailbox-property-inactive', string=lambda text: '保証金' in text).text.replace('保証金', '').strip() if item.find('div', class_='detailbox-property-inactive', string=lambda text: '保証金' in text) else '-',\n",
+    "        '敷引・償却': item.find('div', class_='detailbox-property-inactive', string=lambda text: '敷引・償却' in text).text.replace('敷引・償却', '').strip() if item.find('div', class_='detailbox-property-inactive', string=lambda text: '敷引・償却' in text) else '-',\n",
     "        '取り扱い店舗': item.select_one('.detailnote-box .detailnote-box-item div:nth-of-type(1)').text.strip() if item.select_one('.detailnote-box .detailnote-box-item div:nth-of-type(1)') else '-',\n",
     "        '取り扱い店舗の電話番号': item.find('div', class_='ui-text--bold').text.strip() if item.find('div', class_='ui-text--bold') else '-'\n",
     "    }\n",
