--- a/make_db/make_db_jasmine_chiyoda_page1_property1.ipynb
+++ b/make_db/make_db_jasmine_chiyoda_page1_property1.ipynb
@@ -269,13 +269,13 @@
       "     </li>\n",
       "    </ul>\n",
       "    <span class=\"dn\" id=\"js-mylistbukkencountcookie\">\n",
-      "     \"20240519125449:H:0\"\n",
+      "     \"20240519185504:H:0\"\n",
       "    </span>\n",
       "    <span class=\"dn\" id=\"js-mylistkaishacountcookie\">\n",
-      "     \"20240519125449:H:0\"\n",
+      "     \"20240519185504:H:0\"\n",
       "    </span>\n",
       "    <span class=\"dn\" id=\"js-mylistkensakujokencountcookie\">\n",
-      "     \"20240519125449:H:0\"\n",
+      "     \"20240519185504:H:0\"\n",
       "    </span>\n",
       "   </div>\n",
       "  </div>\n",
@@ -614,7 +614,7 @@
       "             賃貸\n",
       "             <div class=\"tabhit-numgroup\">\n",
       "              <span class=\"tabhit-num\">\n",
-      "               66953\n",
+      "               66550\n",
       "              </span>\n",
       "              <span class=\"tabhit-txt\">\n",
       "               件\n",
@@ -683,7 +683,7 @@
       "          </div>\n",
       "          <div class=\"paginate_set\">\n",
       "           <div class=\"paginate_set-hit\">\n",
-      "            66953\n",
+      "            66550\n",
       "            <span>\n",
       "             件\n",
       "            </span>\n",
@@ -7790,7 +7790,7 @@
       "         </div>\n",
       "         <div class=\"pagination_set\">\n",
       "          <div class=\"pagination_set-hit\">\n",
-      "           66,953\n",
+      "           66,550\n",
       "           <span>\n",
       "            件\n",
       "           </span>\n",
@@ -7833,8 +7833,8 @@
       "             ...\n",
       "            </li>\n",
       "            <li>\n",
-      "             <a href=\"/jj/chintai/ichiran/FR301FC011/?ar=030&amp;bs=040&amp;fw=%E5%8D%83%E4%BB%A3%E7%94%B0%E5%8C%BA&amp;page=2232\">\n",
-      "              2232\n",
+      "             <a href=\"/jj/chintai/ichiran/FR301FC011/?ar=030&amp;bs=040&amp;fw=%E5%8D%83%E4%BB%A3%E7%94%B0%E5%8C%BA&amp;page=2219\">\n",
+      "              2219\n",
       "             </a>\n",
       "            </li>\n",
       "           </ol>\n",
@@ -7853,7 +7853,7 @@
       "             賃貸\n",
       "             <div class=\"tabhit-numgroup\">\n",
       "              <span class=\"tabhit-num\">\n",
-      "               66953\n",
+      "               66550\n",
       "              </span>\n",
       "              <span class=\"tabhit-txt\">\n",
       "               件\n",
@@ -7892,6 +7892,23 @@
       "           <ul class=\"themesearch-list\">\n",
       "            <li class=\"themesearch-body\">\n",
       "             <!-- ↓===================================================================================================================↓ -->\n",
+      "             <!-- ↓/list/FR_040_030_CL_theme_05.html↓ -->\n",
+      "             <a href=\"/tokushu/selection/chintai_kanto/th_2.html\">\n",
+      "              <div>\n",
+      "               <img alt=\"\" class=\"ui-thumb ui-thumb--1\" height=\"110\" src=\"/edit/assets/suumo/img/include/inc_FR_list_030_theme_05.jpg\" width=\"150\"/>\n",
+      "              </div>\n",
+      "              <div class=\"themesearch-title\">\n",
+      "               新築&amp;築浅\n",
+      "              </div>\n",
+      "             </a>\n",
+      "             <p class=\"themesearch-txt\">\n",
+      "              新生活は、やっぱりキレイなお部屋で始めたい！\n",
+      "             </p>\n",
+      "             <!-- ↑/list/FR_040_030_CL_theme_05.html↑ -->\n",
+      "             <!-- ↑===================================================================================================================↑ -->\n",
+      "            </li>\n",
+      "            <li class=\"themesearch-body\">\n",
+      "             <!-- ↓===================================================================================================================↓ -->\n",
       "             <!-- ↓/list/FR_040_030_CL_theme_03.html↓ -->\n",
       "             <a href=\"/tokushu/selection/chintai_kanto/th_7.html\">\n",
       "              <div>\n",
@@ -7905,23 +7922,6 @@
       "              ハイスペックで設備が充実！快適な新生活を始めよう\n",
       "             </p>\n",
       "             <!-- ↑/list/FR_040_030_CL_theme_03.html↑ -->\n",
-      "             <!-- ↑===================================================================================================================↑ -->\n",
-      "            </li>\n",
-      "            <li class=\"themesearch-body\">\n",
-      "             <!-- ↓===================================================================================================================↓ -->\n",
-      "             <!-- ↓/list/FR_040_030_CL_theme_02.html↓ -->\n",
-      "             <a href=\"/tokushu/selection/chintai_kanto/th_6.html\">\n",
-      "              <div>\n",
-      "               <img alt=\"\" class=\"ui-thumb ui-thumb--1\" height=\"110\" src=\"/edit/assets/suumo/img/include/inc_FR_list_030_theme_02.jpg\" width=\"150\"/>\n",
-      "              </div>\n",
-      "              <div class=\"themesearch-title\">\n",
-      "               リフォーム済み\n",
-      "              </div>\n",
-      "             </a>\n",
-      "             <p class=\"themesearch-txt\">\n",
-      "              キレイでおトクに住みたい人にオススメ\n",
-      "             </p>\n",
-      "             <!-- ↑/list/FR_040_030_CL_theme_02.html↑ -->\n",
       "             <!-- ↑===================================================================================================================↑ -->\n",
       "            </li>\n",
       "            <li class=\"themesearch-body\">\n",
@@ -8143,16 +8143,16 @@
       "                   都道府県で絞り込む\n",
       "                  </option>\n",
       "                  <option value=\"13\">\n",
-      "                   東京都     65825件\n",
+      "                   東京都     65473件\n",
       "                  </option>\n",
       "                  <option value=\"14\">\n",
-      "                   神奈川県     226件\n",
+      "                   神奈川県     212件\n",
       "                  </option>\n",
       "                  <option value=\"11\">\n",
-      "                   埼玉県     444件\n",
+      "                   埼玉県     421件\n",
       "                  </option>\n",
       "                  <option value=\"12\">\n",
-      "                   千葉県     391件\n",
+      "                   千葉県     377件\n",
       "                  </option>\n",
       "                  <option value=\"08\">\n",
       "                   茨城県     33件\n",
@@ -9892,7 +9892,7 @@
       "\n",
       "\t// 賃貸ローテーションバナー\n",
       "\t\n",
-      "\t$('#js-fr_lotation_banner').load('/jj/common/parts/JJ901FJ901/?ar=030&times=1716089689525&kkkKoseiCd=C900001&dc=4'.unEscapeHTML(), function () {\n",
+      "\t$('#js-fr_lotation_banner').load('/jj/common/parts/JJ901FJ901/?ar=030&times=1716111304744&kkkKoseiCd=C900001&dc=4'.unEscapeHTML(), function () {\n",
       "\t\tif(!$('#js-fr_lotation_banner').html().match(/<span id=\"js-banner-none\">/)) {\n",
       "\t\t\t$('#js-fr_lotation_banner').css('display', 'block');\n",
       "\t\t}\n",
@@ -10048,7 +10048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10066,10 +10066,10 @@
     "    '築年数': [soup.select('td.detailbox-property--col3')[1].find_all('div')[1].text if len(soup.select('td.detailbox-property--col3')[1].find_all('div')) > 1 else '-'],\n",
     "    '住所': [soup.select_one('td.detailbox-property-col:not([class*=\"detailbox-property--\"])').text.strip()],\n",
     "    '最寄り駅と距離': [soup.select_one('.detailnote-box > div').text.strip()],\n",
-    "    '敷金': ['-' if soup.find('div', string='敷') is None or soup.find('div', string='敷').find_next('div').text == '-' else soup.find('div', string='敷').find_next('div').text],\n",
-    "    '礼金': ['-' if soup.find('div', string='礼') is None or soup.find('div', string='礼').find_next('div').text == '-' else soup.find('div', string='礼').find_next('div').text],\n",
-    "    '保証金': ['-' if soup.find('div', class_='detailbox-property-inactive').text.strip() == '保証金 -' else soup.find('div', class_='detailbox-property-inactive').text.strip().replace('保証金', '').strip()],\n",
-    "    '敷引・償却': ['-' if soup.find('div', string='敷引・償却') is None or soup.find('div', string='敷引・償却').find_next('div').text == '-' else soup.find('div', string='敷引・償却').find_next('div').text],\n",
+    "    '敷金': soup.find('td', class_='detailbox-property--col2').find_all('div')[0].contents[-1].strip() if soup.find('td', class_='detailbox-property--col2') else '-',\n",
+    "    '礼金': soup.find('td', class_='detailbox-property--col2').find_all('div')[1].contents[-1].strip() if soup.find('td', class_='detailbox-property--col2') else '-',\n",
+    "    '保証金': soup.find('div', class_='detailbox-property-inactive', string=lambda text: '保証金' in text).text.replace('保証金', '').strip() if soup.find('div', class_='detailbox-property-inactive', string=lambda text: '保証金' in text) else '-',\n",
+    "    '敷引・償却': soup.find('div', class_='detailbox-property-inactive', string=lambda text: '敷引・償却' in text).text.replace('敷引・償却', '').strip() if soup.find('div', class_='detailbox-property-inactive', string=lambda text: '敷引・償却' in text) else '-',\n",
     "    '取り扱い店舗': [soup.select_one('.detailnote-box .detailnote-box-item div:nth-of-type(1)').text.strip()] if soup.select_one('.detailnote-box .detailnote-box-item div:nth-of-type(1)') else ['-'],\n",
     "    '取り扱い店舗の電話番号': [soup.find('div', class_='ui-text--bold').text.strip()] if soup.find('div', class_='ui-text--bold') else ['-']\n",
     "}\n"
@@ -10077,14 +10077,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'物件名': ['イシカワビレッジ 3階'], 'URL': ['https://suumo.jp/chintai/bc_100192305263/'], 'イメージ画像': ['https://img01.suumo.com/front/gazo/fr/bukken/263/100192305263/100192305263_gw.jpg'], '賃料': [15000], '管理費': ['7000円'], '間取り': ['ワンルーム'], '専有面積': ['20m2'], '向き': ['-'], '物件種別': ['マンション'], '築年数': ['築32年'], '住所': ['茨城県水戸市石川１'], '最寄り駅と距離': ['ＪＲ常磐線/赤塚駅 歩29分'], '敷金': ['-'], '礼金': ['-'], '保証金': ['-'], '敷引・償却': ['-'], '取り扱い店舗': ['不動産通信社 (株)ユウラク'], '取り扱い店舗の電話番号': ['03-5205-8424']}\n"
+      "{'物件名': ['イシカワビレッジ 3階'], 'URL': ['https://suumo.jp/chintai/bc_100192305263/'], 'イメージ画像': ['https://img01.suumo.com/front/gazo/fr/bukken/263/100192305263/100192305263_gw.jpg'], '賃料': [15000], '管理費': ['7000円'], '間取り': ['ワンルーム'], '専有面積': ['20m2'], '向き': ['-'], '物件種別': ['マンション'], '築年数': ['築32年'], '住所': ['茨城県水戸市石川１'], '最寄り駅と距離': ['ＪＲ常磐線/赤塚駅 歩29分'], '敷金': '-', '礼金': '-', '保証金': '-', '敷引・償却': '-', '取り扱い店舗': ['不動産通信社 (株)ユウラク'], '取り扱い店舗の電話番号': ['03-5205-8424']}\n"
      ]
     }
    ],
@@ -10094,7 +10094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -10125,7 +10125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
