6区の物件を取得しました。Share機能 shareinfo.py を作成しました

--- a/make_db/make_db_jasmine_chiyoda_3pages_all_property.ipynb
+++ b/make_db/make_db_jasmine_chiyoda_3pages_all_property.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,17 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 基本URL（ページ番号部分を除く）\n",
-    "base_url = \"https://suumo.jp/jj/chintai/ichiran/FR301FC011/?ar=030&bs=040&fw=%E5%8D%83%E4%BB%A3%E7%94%B0%E5%8C%BA&page={}\""
+    "base_url = \"https://suumo.jp/jj/chintai/ichiran/FR301FC011/?ar=030&bs=040&fw=%e6%9d%b1%e4%ba%ac%e9%83%bd%e5%8d%83%e4%bb%a3%e7%94%b0%e5%8c%ba&po1=09&page={}\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
